# Hypocycloid

./: CMakeLists.txt  README.md  main.cpp
shaders/: shader.frag  shader.vert
